# invenio-config-iform

./: .editorconfig  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.rst  babel.ini  pyproject.toml  run-tests.sh  setup.cfg  setup.py
.github/workflows/: publish.yml  pypi-publish.yml  tagging.yml  tests.yml
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
invenio_config_iform/: __about__.py  __init__.py  __version__.py
invenio_config_iform/custom_fields/: __init__.py
invenio_config_iform/permissions/: generators.py  policies.py
scripts/: test_docs.py
tests/: conftest.py  test_invenio_config_tugraz.py  test_policies.py
